--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "prerelease",
+    "@fortawesome/free-solid-svg-icons": "prerelease",
+    "@fortawesome/react-fontawesome": "prerelease",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4"
